docs: eliminate all JavaDoc warnings and add comprehensive API documentation (#2306)
* Initial plan

* docs: add comprehensive JavaDocs to AccessibilityActions

- Add class-level JavaDoc describing purpose, caching strategy, and thread-safety
- Add constructor JavaDoc with @param tags
- Add full JavaDoc to all public methods:
  - analyzePage (2 overloads)
  - analyzeAndReturn (4 overloads)
  - analyzeWithIgnoredRules
  - assertNoCriticalViolations / verifyNoCriticalViolations
  - assertIsAccessible / verifyIsAccessible
  - assertNoViolationsByImpact
  - failIfViolationsExist
  - assertAccessibilityScoreAtLeast (4 overloads)
  - backToBrowser
- Each distinct method has at least one {@code} usage example
- Remove duplicate stacked comment blocks from analyzeAndReturn and analyzeWithIgnoredRules
- No functional code changes

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* docs: add comprehensive JavaDocs to AlertActions and FluentWebDriverAction

- AlertActions: add class-level JavaDoc describing alert/confirm/prompt
  dialog handling; add docs for all 3 constructors (default, WebDriver,
  DriverFactoryHelper) and all 5 public methods (isAlertPresent,
  acceptAlert, dismissAlert, getAlertText, typeIntoPromptAlert), each
  with @param/@return tags and a {@code} usage example
- FluentWebDriverAction: add JavaDoc for and() explaining it is a fluent
  chaining helper returning 'this', with a {@code} example

No logic or behaviour changed; documentation only.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Add comprehensive JavaDocs to Actions.java

- Add class-level JavaDoc with usage example and thread-safety note
- Add JavaDoc to all 4 constructors with @param tags
- Add JavaDoc to 7 previously undocumented public methods: click(String),
  type(String, CharSequence...), dropFileToUpload, get(), clipboard(),
  waitUntil(Function), waitUntil(Function, Duration)
- Add class-level JavaDoc and full method JavaDocs for inner cla